# MoE-GS-studio

./: .gitignore  .gitmodules  LICENSE.md  README.md  SETUP_UV.md  THIRDPARTY_RECOVERY.md  environment.yml  helper_model.py  m_psnr.py  pyproject.toml  render_E3.py  render_E3_tech.py  render_E4.py  render_emb.py  render_hash.py  requirements.txt  train_E3.py  train_E3_tech.py  train_E4.py  train_emb.py  train_emb.sh  train_hash.py  train_hash.sh
arguments/: __init__.py
arguments/dynerf/: coffee_martini_0.5e-1.py  coffee_martini_2.py  coffee_martini_E3_0.py  coffee_martini_E3_1.py  coffee_martini_E3_2.py  coffee_martini_E3_hidden.py  coffee_martini_E3_hidden_detach.py  coffee_martini_E3_multi.py  coffee_martini_E4_0.py  coffee_martini_E4_1.py  coffee_martini_E4_2.py  coffee_martini_E4_hidden.py  coffee_martini_E4_hidden_detach.py  coffee_martini_E5_0.py  (+15 more)
arguments_MoDE/: __init__.py
gaussian_renderer/: __init__.py
gaussian_renderer_emb/: __init__.py  network_gui.py
gaussian_renderer_hash/: __init__.py  network_gui.py
ply_io/: README.md  __init__.py  _native.py
scene/: __init__.py  c_gaussian_model.py  cameras.py  dataset_readers.py
scene_spline_rot/: __init__.py  camera.py  cameras.py  dataset.py  dataset_readers.py  deform_model.py  deformation.py  gaussian_model.py  hexplane.py  hyper_loader.py  neural_3D_dataset_NDC.py  utils.py
script/: pre_n3v.py  pre_technicolor.py
scripts_MoE-GS/: train_E3.sh  train_E3_tech.sh  train_E4.sh
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  point_utils.py  pose_utils.py
(+47 files in other folders)
